# pyctr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cosserat_rod/: cosserat_rod.py  scene.py  utils.py
docs/: conf.py  index.rst  modules.rst  pyctcr.rst  pyctcr.visualization.rst
docs/notebooks/: Plotting robots with PyCTCR.ipynb  shape_through_external_tip_force.ipynb
docs/notebooks/.ipynb_checkpoints/: Introduction ConcentricTubeContinuumRobot class - Changing configuration and applying external forces-checkpoint.ipynb  Plotting robots with PyCTCR-checkpoint.ipynb
example_robots/: ctr_robot.yaml
example_robots/rods/: curved_tube_inner.yaml  curved_tube_outer.yaml
pyctcr/: __init__.py  cosserat_rod.py  cosserat_rod_force_along.py  robots.py  utils.py  yaml_to_model.py
pyctcr/plotting/: scene.py
pyctcr/visualization/: scenes.py
pyctr/: cosserat_rod.py  cosserat_rod_force_along.py  robots.py  utils.py  yaml_to_model.py
pyctr/visualization/: scenes.py
tests/: calc_material_props_from_jiecongs_mess.py  render_robots.py  robot_tests.py  test_matplotlib_renders.py  test_robot.py
