[metadata]
name = continuum_robot_models
version = 0.0.2
author = Heiko Donat
author_email = info@hdonat.net
description = A package containing implementations for Cosserad rod based robots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.rob.cs.tu-bs.de/staff/personal/hdo/software_packages/continuum_robot_models
classifiers =
    Programming Language :: Python :: 3
    License :: EUPL
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True